# binde

./: Cargo.toml  LICENSE  README.md
binde_derive/: Cargo.toml
binde_derive/src/: lib.rs
src/: lib.rs
tests/: derive.rs  simple.rs
